<resources>
    <string name="app_name">三国杀</string>
    <string name="title_activity_detail">detail</string>
    <string name="appwidget_text">当前没有任何信息</string>
    <string name="add_widget">Add widget</string>
    <string name="memb1">陈新堉</string>
    <string name="memb2">陈~潇</string>
    <string name="memb3">陈衍洪</string>
    <string name="memb4">褚柏栋</string>
    <string name="member">小组成员：</string>
    <string-array name="character_names">
        <item>刘备</item>
        <item>关羽</item>
        <item>张飞</item>
        <item>诸葛亮</item>
        <item>赵云</item>
        <item>曹操</item>
        <item>孙权</item>
        <item>司马懿</item>
        <item>小乔</item>
        <item>貂蝉</item>
    </string-array>
    <string-array name="Kingdoms">
        <item>蜀</item>
        <item>群</item>
        <item>蜀</item>
        <item>蜀</item>
        <item>蜀</item>
        <item>魏</item>
        <item>吴</item>
        <item>魏</item>
        <item>吴</item>
        <item>群</item>
    </string-array>
    <string-array name="gender">
        <item>男</item>
        <item>男</item>
        <item>男</item>
        <item>男</item>
        <item>男</item>
        <item>男</item>
        <item>男</item>
        <item>男</item>
        <item>女</item>
        <item>女</item>
    </string-array>
    <string-array name="native_place">
        <item>幽州涿郡涿(河北保定市涿州)</item>
        <item>司隶河东郡解(山西运城市临猗县西南)</item>
        <item>幽州涿郡(河北保定市涿州)</item>
        <item>徐州琅邪国阳都(山东临沂市沂南县南)</item>
        <item>冀州常山国真定(河北石家庄市正定县南)</item>
        <item>豫州沛国谯(安徽亳州市亳县)</item>
        <item>扬州吴郡富春(浙江杭州市富阳)</item>
        <item>司隶河内郡温(河南焦作市温县西)</item>
        <item>扬州庐江郡皖(安徽安庆市潜山县)</item>
        <item>\?</item>
    </string-array>
    <string-array name="birth">
        <item>161年</item>
        <item>\?</item>
        <item>\?</item>
        <item>181年</item>
        <item>\?</item>
        <item>155年</item>
        <item>182年</item>
        <item>179年</item>
        <item>\?</item>
        <item>\?</item>
    </string-array>
    <string-array name="death">
        <item>223年</item>
        <item>219年</item>
        <item>221年</item>
        <item>234年</item>
        <item>229年</item>
        <item>220年</item>
        <item>252年</item>
        <item>251年</item>
        <item>\?</item>
        <item>\?</item>
    </string-array>
    <string-array name="nickname">
        <item>以德服人</item>
        <item>义薄云天</item>
        <item>嫉恶如仇</item>
        <item>神机妙算</item>
        <item>常胜将军</item>
        <item>一代枭雄</item>
        <item>乘马骑虎</item>
        <item>机关算尽</item>
        <item>矫情之花</item>
        <item>闭月羞花</item>
    </string-array>
    <string-array name="profile">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string-array name="gender_spin">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="kingdom_spin">
        <item>魏</item>
        <item>蜀</item>
        <item>吴</item>
        <item>群</item>
    </string-array>
</resources>
