<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/start"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/start">

    <TextView
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:singleLine="false"
        android:text="@string/member"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/memb1"
        style="@style/member"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/memb1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/memb2"
        style="@style/member"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/memb2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/memb3"
        style="@style/member"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/memb3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/memb4"
        style="@style/member"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="20dp"
        android:text="@string/memb4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>
